--- a/zju_thesis/zjuthesis.cls
+++ b/zju_thesis/zjuthesis.cls
@@ -74,7 +74,10 @@ Created: 2014.09.15 by Sky and Hamburger, Last Modified: 2014.09.12 by Hamburger
 }
 \urlstyle{same}
 % 参考文献正文上标样式设置
-\RequirePackage[sort&compress,numbers]{natbib}
+% - 顺序编码制
+% \RequirePackage[sort&compress,numbers]{natbib}
+% - 著者-出版年
+\RequirePackage{natbib}
 % hypernat 可以让hyperref 和natbib 混合使用，但它需要放在这两者之后。
 \RequirePackage{hypernat}
 % 修复图表超链接不准的问题
@@ -921,11 +924,16 @@ Created: 2014.09.15 by Sky and Hamburger, Last Modified: 2014.09.12 by Hamburger
       \endlist}
 
 % 采用gbt7714-2005参考文献样式，
+% - 顺序编码制
 % 参考自https://github.com/githamburger/GBT7714-2005-BibTeX-Style
-\bibliographystyle{gbt7714-2005}
+% \bibliographystyle{gbt7714-2005}
+% - 著者-出版年
+\bibliographystyle{GBT7714-2005AYLang-ZJU}
 
 % natbib宏包命令，参考文献上标设置。
-\setcitestyle{super,square,comma}
+% - 顺序编码制
+% \setcitestyle{super,square,comma}
+% - 著者-出版年
 
 % 重新定义 \ref 命令，使其前面自动加一个 ``~''。因为hyperref 宏包会通过 \AtBegin-
 % Document 修改 \ref 的定义，因此我们对 \ref 的修改也必须使用\AtBeginDocument 命
