change chapter settings

--- a/zju_thesis/zjuthesis.cls
+++ b/zju_thesis/zjuthesis.cls
@@ -271,13 +271,15 @@ Created: 2014.09.15 by Sky and Hamburger, Last Modified: 2014.09.12 by Hamburger
 \fi
 % 重新定义\chaptermark，使其为\leftmark引用。
 \renewcommand\chaptermark[1]{%
-\markboth{\MakeUppercase{%
+%%\markboth{\MakeUppercase{%
+\markboth{% 取消 Uppercase
 \ifnum \c@secnumdepth >\m@ne
 	\if@mainmatter
 		\@chapapp  \hskip1em%
 	\fi
 \fi
-#1}}{}}
+%%#1}}{}}
+#1}{}}
 
 %---------- 本机字体设置 ----------
 \RequirePackage{fontspec}
@@ -717,7 +719,8 @@ Created: 2014.09.15 by Sky and Hamburger, Last Modified: 2014.09.12 by Hamburger
 
 %---------- 层次标题格式设置 ----------
 \setcounter{secnumdepth}{4}		%设置为四级标题
-\renewcommand\@chapapp{第\thechapter 章}%
+%%\renewcommand\@chapapp{第\thechapter 章}%
+\renewcommand\@chapapp{\thechapter}% 第…章 > …
 
 % 以下对标题格式采用laTeX2e底层命令主要是为了防止ctex宏包升级改变导致的命令不兼
 % 容性，假如2.0之后宏包对1.02宏包命令不再支持，以后又要修改，不如一鼓作气。
